changes in rag and gatway